Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

Ver 4.93 (??/5/01)
- Triangulation_hierarchy doc fixes.

Ver 4.92 (21/5/01)
- add function star_hole in Triangulation_default_data_structure_2
  Triangulation_data_structure_using_list
  and Triangulation_2
- add a Point iterator to Triangulation_2

Ver 4.91 (16/5/01)
fixed previous unwanted change to Triangulation_2.h

Ver 4.90 (15/5/01)
fixed previous unwanted change to Triangulation_2.h

Ver 4.89 (15/5/01)
- add remove_constraint in Constrained_Delaunay_triangulation_2
- add is_contrained(Edge e), remove_incident_constraints(Vertex_handle v)
  are_there_incident_constraints(Vertex_handle v) in 
  Constrained_triangulation_2 and Constrained_Delaunay_triangulation_2

Ver 4.88 (14/5/01)
- fixed missind std:: in front of back_inserter

Ver 4.87 (7/5/01)
- default template parameters for Delaunay_triangulation_2.h
- added forgotten file Dummy_output_iterator.h

Ver 4.86 (2/5/01)
- unify find_conflics()t member functions of Delaunay and constrained Delaunay
triangulations
- introdubce new member functions Boundary_of_conflict_zone()
in Delaunay_triangulation_2 and Constrained_Delaunay_triangulation_2.h
- fixed the test of constrained and Delaunay constrained triangulations

Ver 4.85 (17/04/01)
- cleaned up Constrained_triangulation_2 and
  Constrained_Delaunay_triangulation_2.h
- Fix warning in Pointer.h for operator==(CGAL_NULL_TYPE).
- Fix warning in Triangulation_line_face_circulator_2.h
- added typename in _test_line_face_circulators

Ver 4.84 (14/03/01)
- pass the private constructor of Line_face_circulator
  to public, to please Microsoft compilers

Ver 4.83 (22/02/01)
- cleaned up Line_face_circulator and locate. 
- fixed line_walk
- add test for Line_face_circulator and line_walk

Ver 4.82 (20/02/01)
- remove const_cast for "this" in march_locate_2d of Triangulation_2

Ver 4.81 (19/01/01)